# data-juicer

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  404.html  BRM-Local-Improved.md  BRM-Local-StatusQuo.md  BRM-Ray-StatusQuo.md  BetterGPU.md  Dockerfile  Evaluation.py  ImprovedLocalMode.md  LICENSE  README.md  README_ZH.md  app.py  data_juicer.analysis.html  data_juicer.config.html  data_juicer.core.data.html  data_juicer.core.executor.html  data_juicer.core.html  data_juicer.download.html  data_juicer.format.html  data_juicer.html  data_juicer.ops.aggregator.html  data_juicer.ops.common.html  data_juicer.ops.deduplicator.html  data_juicer.ops.filter.html  data_juicer.ops.grouper.html  data_juicer.ops.html  data_juicer.ops.mapper.annotation.html  data_juicer.ops.mapper.html  data_juicer.ops.selector.html  data_juicer.tools.html  data_juicer.utils.html  genindex.html  index.html  label_studio_localhost_connection.json  (+12 more)
.doctrees/: data_juicer.analysis.doctree  data_juicer.config.doctree  data_juicer.core.doctree  data_juicer.doctree  data_juicer.format.doctree  data_juicer.ops.common.doctree  data_juicer.ops.deduplicator.doctree  data_juicer.ops.doctree  data_juicer.ops.filter.doctree  data_juicer.ops.mapper.doctree  data_juicer.ops.selector.doctree  data_juicer.tools.doctree  data_juicer.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  question.yml
.github/workflows/: deploy_sphinx_docs.yml  deploy_spinx_docs.yml  perf-bench.yml  pre-commit.yml  publish-docker-oss.yml  publish-docker.yml  publish-pypi.yml  sphinx_docs_linkcheck.yml  stale.yml  unit-test-partial.yml  unit-test.yml  unittest-gpu.yml  unittest.yml
.pre-commit-hooks/: build_op_doc.py  rewrite_op_docstrings.py  tag_mappings.json
DaaR/: README.md  requirements.txt
DaaR/baselines/: alpagasus.py  instag_select.py  instag_tagger.py  instruction_len.py  rand.py
DaaR/ckpt/: README.md
DaaR/data/: example.jsonl
DaaR/distribution_syn/: ebd_save.py  select_inter_diversity.py  select_intra_diversity.py
DaaR/eval/: README.md
DaaR/models/: README.md
DaaR/train/: example.sh
DetailMaster_Dataset/: DetailMaster_mini_benchmark.json
Img-Diff-codes/: README.md
Img-Diff-codes/object_removal/: generate_inpaint.py  run_generate_inpaint.sh
Img-Diff-codes/object_replacement/: cos_count.py  cos_filter.py  cos_filter.sh  generate_bbox.py  generate_bbox.sh  generate_final_data_new_edit.py  generate_final_data_new_edit.sh
Img-Diff-codes/pairs_generator/: gen.py  gen.sh  gen_new_data_ddp.py  gen_sdxl_new_data_ddp.sh  processors.py  prompt_to_prompt_pipeline.py  unnatural_images_filter.py
MindGYM/: README.md  requirements.txt
MindGYM/data_generate/: config.py  config_cn.py  config_img.py  config_img_cn.py  data_generate.sh  data_generate_cn.sh  data_generate_img.sh  data_generate_img_cn.sh  thinking.py  thinking_cn.py  thinking_scienceqa.py  thinking_scienceqa_cn.py
MindGYM/data_process/: process.py  process_img.py
MindGYM/eval/: requirements.txt
MindGYM/train/: merge.sh  step-1.sh  step-2.sh  step-3.sh  step-4.sh
_modules/: data_juicer.html  index.html
_sources/: data_juicer.analysis.rst.txt  data_juicer.config.rst.txt  data_juicer.core.data.rst.txt  data_juicer.core.executor.rst.txt  data_juicer.core.rst.txt  data_juicer.download.rst.txt  data_juicer.format.rst.txt  data_juicer.ops.aggregator.rst.txt  data_juicer.ops.common.rst.txt  data_juicer.ops.deduplicator.rst.txt  data_juicer.ops.filter.rst.txt  data_juicer.ops.grouper.rst.txt  data_juicer.ops.mapper.annotation.rst.txt  data_juicer.ops.mapper.rst.txt  data_juicer.ops.rst.txt  data_juicer.ops.selector.rst.txt  data_juicer.rst.txt  data_juicer.tools.rst.txt  data_juicer.utils.rst.txt
_static/: documentation_options.js
configs/: README.md  README_ZH.md  config_all.yaml  config_min.yaml
configs/annotation/: annotation_default.yaml  (+1 more)
data_construction_pipeline/: bbox_to_location.py  bbox_to_location.sh  detect_character_attributes.py  detect_character_attributes.sh  detect_character_locations.py  detect_character_locations.sh  detect_main_character.py  detect_main_character.sh  detect_scene_attributes.py  detect_scene_attributes.sh  filter_feature.py  filter_feature.sh  filter_main_character.py  filter_main_character.sh  polish_prompt.py  polish_prompt.sh
data_juicer/: LICENSE  __init__.py
demos/: README.md  README_ZH.md
docs/: .Operators_ZH.md.un~  BadDataExhibition.md  BadDataExhibition_ZH.md  DJ_SORA.md  DJ_SORA_ZH.md  DJ_agent.md  DJ_agent_ZH.md  DJ_service.md  DJ_service_ZH.md  DatasetCfg.md  DatasetCfg_ZH.md  DeveloperGuide.md  DeveloperGuide_ZH.md  Distributed.md  Distributed_ZH.md  JobManagement.md  JobManagement_ZH.md  Operators.md  Operators_ZH.md  Operators_ZH.md~  RecipeGallery.md  RecipeGallery_ZH.md  Sandbox-ZH.md  Sandbox.md  Sandbox_ZH.md  awesome_llm_data.md
environments/: dev_requires.txt  dist_requires.txt  minimal_requires.txt  preprocess_requires.txt  quality_classifier_requires.txt  sandbox_requires.txt  science_requires.txt
evaluation_pipeline/: cal_eval.py  cal_eval.sh  eval_process.py  eval_process.sh  split_dataset.py
label_studio_templates/: human_preference.xml
medeval/: README.md  run.sh  vllm_eval_launch.sh  vllm_infer_launch.sh
my_pretrained_method/: llama3_by_aliyun.py  modelscope_delete.py  speech_age_gender.py  use_in_dj.py
playground/: process_jsonlines.py
scripts/: README.md  run_slurm.sh
tests/: run.py
tools/: analyze_data.py  check_ray_cluster.py  clear_cache.py  count_rows.py  data_resplit.py  dj_install.py  execution_graph_generator.py  generate_smtp_cert.py  generate_uv_lock.py  job_progress_monitor.py  parquet2jsonl.py  process_data.py  sandbox_starter.py
tutorials/: 01_build_data_recipes.ipynb  02_gain_operator_insights.ipynb  03_analyze_dataset.ipynb  04_process_dataset.ipynb  05_process_dataset_with_distributed_system.ipynb  06_develop_a_new_operator.ipynb  07_use_tool_pool.ipynb  08_experience_more_online_demos.ipynb  Welcome.ipynb
(+12566 files in other folders)
