[project]
name = "py-data-juicer"
version = "0.0.1"
description = "A One-Stop Data Processing System for Large Language Models."
authors = [
    {name = "SysML Team of Alibaba Tongyi Lab"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "fsspec==2023.5.0",
    "pandas",
    "numpy>=1.26.4,<2.0.0",
    "av==13.1.0",
    "soundfile",
    "librosa>=0.10",
    "samplerate",
    "resampy",
    "loguru",
    "tabulate",
    "tqdm",
    "jsonargparse[signatures]",
    "matplotlib",
    "seaborn",
    "emoji==2.2.0",
    "regex",
    "requests",
    "wget",
    "zstandard",
    "lz4",
    "pdfplumber",
    "plotly",
    "python-docx",
    "streamlit",
    "spacy==3.7.0",
    "multiprocess==0.70.12",
    "dill==0.3.4",
    "psutil",
    "pydantic>=2.0",
    "mwparserfromhell",
    "Pillow",
    "fastapi[standard]>=0.110",
    "httpx",
    "wordcloud",
    "jsonlines",
    "bs4",
    "ray==2.40.0",
    "nltk==3.9.1",
    "uv>=0.1.0",
    "tomli>=2.0.1",
]

[project.optional-dependencies]
sci = [
    "torch>=1.11.0",
    "torchaudio",
    "easyocr==1.7.1",
    "fasttext-wheel",
    "cmake>=3.10,<4.0",
    "kenlm",
    "sentencepiece",
    "scipy",
    "ftfy",
    "simhash-pybind",
    "selectolax",
    "nlpaug",
    "nlpcda",
    "transformers>=4.47.0,<4.48.0",
    "transformers_stream_generator",
    "einops",
    "accelerate",
    "tiktoken",
    "opencc==1.1.6",
    "imagededup",
    "spacy-pkuseg",
    "diffusers>=0.18.0",
    "simple-aesthetics-predictor",
    "scenedetect[opencv]",
    "ffmpeg-python",
    "opencv-python",
    "vllm>=0.6.5",
    "rouge",
    "dashscope",
    "openai",
    "ultralytics",
    "huggingface_hub<0.26.0",
    "rembg",
    "onnxruntime",
    "label-studio==1.17.0",
]
dist = [
    "redis>=5.0.0",
]
dev = [
    "coverage",
    "pre-commit",
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "recommonmark",
    "wandb<=0.19.0",
]
tools = [
    "fire",
    "jsonlines",
    "click",
    "pyspark",
    "wget",
]
sandbox = [
    "torch>=1.11.0",
    "fire",
    "pyspark",
    "vbench",
    "modelscope",
    "Pillow",
    "deepspeed",
    "safetensors",
    "timm",
    "xformers",
    "decord",
    "opencv-python",
    "omegaconf",
    "imageio[ffmpeg,pyav]",
    "tensorboard",
    "diffusers==0.27.0",
    "transformers>=4.37.2",
    "func_timeout",
]

[project.scripts]
dj-process = "data_juicer.tools.process_data:main"
dj-analyze = "data_juicer.tools.analyze_data:main"
dj-install = "data_juicer.tools.dj_install:main"

[build-system]
requires = ["hatchling", "uv>=0.1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_juicer"]

[tool.flake8]
per-file-ignores = [
    "*/__init__.py: F401"
] 